Little changes in css to give a modern style

--- a/index.html
+++ b/index.html
@@ -90,8 +90,11 @@
           src="./assets/images/Profile_Photo.jpg"
           alt="Foto de Jean Bermudez"
         />
-        <h1>Hola, soy Jean Bermúdez</h1>
+        <div class="typewriter">
+          <h1>Hola, soy Jean Bermúdez</h1>
+        </div>
         <h2>Estudiante de Ingeniería en Sistemas de Información.</h2>
+        <h2>Universidad Nacional de Costa Rica</h2>
       </div>
       <div class="hero-inferior">
         <img
