Adding new projects and images

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             <!-- Proyecto 1 -->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="proyecto">
-                <img src="./assets/images/hanoi_towers" alt="Proyecto 1">
+                <img class="img-pr" src="./assets/images/hanoi_towers" alt="Proyecto 1">
                 <div class="overlay">
                   <p>Torres de hanoi en C++, utilizando "queues".</p>
                   <div class="iconos-contenedor">
@@ -176,7 +176,7 @@
             <!-- Proyecto 2 -->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="proyecto">
-                <img src="./assets/images/data-python.png" alt="Proyecto 2">
+                <img class="img-pr" src="./assets/images/data-python.png" alt="Proyecto 2">
                 <div class="overlay">
                   <p>Creación de gráficos en Google Collab con Python.</p>
                   <div class="iconos-contenedor">
@@ -190,11 +190,53 @@
             <!-- Proyecto 3 -->
             <div class="col-12 col-md-6 col-lg-4">
               <div class="proyecto">
-                <img src="./assets/images/bank-app.jpg" alt="Proyecto 3">
+                <img class="img-pr" src="./assets/images/bank-app.jpg" alt="Proyecto 3">
                 <div class="overlay">
                   <p>Sistema en C++ registro y manejo de clientes, por medio de "BST".</p>
                   <div class="iconos-contenedor">
                     <a href="https://github.com/JeanCarloB/HanoiTowers" target="_blank" rel="noopener noreferrer">
+                      <i class="bi bi-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Proyecto 4 -->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="proyecto">
+                <img class="img-pr" src="./assets/images/todo-task.jpg" alt="Proyecto 4">
+                <div class="overlay">
+                  <p>To-do task app with react.</p>
+                  <div class="iconos-contenedor">
+                    <a href="https://github.com/JeanCarloB/react-tasks" target="_blank" rel="noopener noreferrer">
+                      <i class="bi bi-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Proyecto 5 -->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="proyecto">
+                <img class="img-pr" src="./assets/images/video-player.png" alt="Proyecto 5">
+                <div class="overlay">
+                  <p>Movies app with react + api</p>
+                  <div class="iconos-contenedor">
+                    <a href="https://github.com/JeanCarloB/movies-app" target="_blank" rel="noopener noreferrer">
+                      <i class="bi bi-github"></i>
+                    </a>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- Proyecto 6 -->
+            <div class="col-12 col-md-6 col-lg-4">
+              <div class="proyecto">
+                <img class="img-pr" src="./assets/images/cloudy.png" alt="Proyecto 6">
+                <div class="overlay">
+                  <p>Weather app with react + api</p>
+                  <div class="iconos-contenedor">
+                    <a href="https://github.com/JeanCarloB/weather-app" target="_blank" rel="noopener noreferrer">
                       <i class="bi bi-github"></i>
                     </a>
                   </div>
