agregando cambios importantes de skills

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
           <a class="navbar-brand" href="#">
             <img
               class="logo"
-              src="./assets/images/IA.png"
+              src="./assets/images/Profile_Photo.jpg"
               id="logo"
               width="60"
               alt="Logo de la página web"
@@ -87,13 +87,13 @@
       >
         <img
           class="hero-imagen rounded-circle"
-          src="./assets/images/Profile_Photo.jpg"
+          src="./assets/images/profile-card.jpeg"
           alt="Foto de Jean Bermudez"
         />
         <div class="typewriter">
           <h1>Hola, soy Jean Bermúdez</h1>
         </div>
-        <h2>Estudiante de Ingeniería en Sistemas de Información.</h2>
+        <h2>Estudiante Avanzado de Ingeniería en Sistemas de Información.</h2>
         <h2>Universidad Nacional de Costa Rica</h2>
       </div>
       <div class="hero-inferior">
@@ -124,13 +124,18 @@
             <i class="bi bi-laptop"></i>
             <p class="experiencia-titulo">Desarrollo Web</p>
             <p>
-              Conocimientos en HTML, CSS, JavaScript y fundamentos de React.js
+              Conocimientos en tecnologías web FullStack  
             </p>
             <div class="badges-contenedor">
               <span class="badge text-bg-primary">HTML</span>
               <span class="badge text-bg-primary">CSS</span>
               <span class="badge text-bg-primary">JavaScript</span>
-              <span class="badge text-bg-primary">React</span>
+              <span class="badge text-bg-primary">React.js</span>
+              <span class="badge text-bg-primary">Next.js</span>
+              <span class="badge text-bg-primary">Node.js</span>
+              <span class="badge text-bg-primary">Express.js</span>
+              <span class="badge text-bg-primary">Angular (entry-level)</span>
+
             </div>
           </div>
           <!-- ESTUDIANTE -->
@@ -138,18 +143,66 @@
             <i class="bi bi-code-slash"></i>
             <p class="experiencia-titulo">Estudiante</p>
             <p>
-              A lo largo de la carrera he aprendido habilidades y tecnologías
+              A lo largo de la carrera he aprendido lenguajes y tecnologías
               las cuáles me generan conocimiento amplio en el área de
               programación.
             </p>
             <div class="badges-contenedor">
+              <span class="badge text-bg-primary">C++</span>
               <span class="badge text-bg-primary">Java</span>
               <span class="badge text-bg-primary">Python</span>
-              <span class="badge text-bg-primary">C++</span>
               <span class="badge text-bg-primary">SQL</span>
+              <span class="badge text-bg-primary">C# (beginner)</span>
             </div>
           </div>
+
+           <!-- BASES DE DATOS -->
+           <div class="columna col-12 col-md-6">
+            <i class="bi bi-laptop"></i>
+            <p class="experiencia-titulo">Bases de datos</p>
+            <p>
+              Conocimiento sobre diferentes SGBD.
+            </p>
+            <div class="badges-contenedor">
+              <span class="badge text-bg-primary">Oracle & PL/SQL</span>
+              <span class="badge text-bg-primary">MySql</span>
+              <span class="badge text-bg-primary">MariaDB (beginner)</span>
+              <span class="badge text-bg-primary">MS SQLSERVER</span>
+              <span class="badge text-bg-primary">Postgresql</span>
+
+            </div>
+          </div>
+          <!-- SOFT SKILLS -->
+          <div class="columna col-12 col-md-6">
+            <i class="bi bi-code-slash"></i>
+            <p class="experiencia-titulo">Habilidades Interpersonales</p>
+            <p>
+              Soy un profesional que también destaco por mis habilidades interpersonales y de trabajo en equipo.
+            </p>
+            <div class="badges-contenedor">
+              <span class="badge text-bg-primary">Trabajo en Equipo</span>
+              <span class="badge text-bg-primary">Comunicación Efectiva</span>
+              <span class="badge text-bg-primary">Resolución de Problemas</span>
+              <span class="badge text-bg-primary">Adaptabilidad</span>
+              <span class="badge text-bg-primary">Liderazgo</span>
+            </div>
+          </div>
+
         </div>
+      </div>
+      <div class="d-flex flex-column mt-5 mb-3 border border-1 border-gray p-3 w-75 justify-content-center align-items-center ">
+         <h2 class="seccion-titulo">Experiencia</h2>
+         <div class="d-flex flex-column">
+            <h5>SMCLTD - Alajuela (2023) - Presente</h5>
+            <p>FullStack Developer</p>
+            <p>Proyecto como parte del curso 'Ingeniería de Sistemas II' en la universidad utilizando Next.js y SQL Server.</p>
+            <ul>
+              <li>Desarrollé páginas clave de la aplicación web.</li>
+              <li>Participé en el desarrollo del backend.</li>
+              <li>Participé en pruebas unitarias, funcionales e integración.</li>
+              <li>Contribuí a la toma de decisiones en grupo y demostré habilidades de liderazgo dentro del equipo.</li>
+            </ul>
+         </div>
       </div>
     </section>
       <!-- GALERIA DE PROYECTOS-->
@@ -256,7 +309,7 @@
               Contáctame para iniciar tu proyecto de desarrollo web y haré que tu visión se vuelva realidad.
             </div>
             <div class="col-12 col-md-4">
-              <a href="mailto:janedoe@micorreo.com">
+              <a href="mailto:bermudezjeancarlo8@gmail.com">
                 <button type="button">  
                   Contacto
                   <i class="bi bi-envelope-check-fill"></i>
@@ -269,7 +322,7 @@
     </section>
     <!-- FOOTER -->
     <footer class="seccion-oscura d-flex flex-column align-items-center justify-content-center">
-      <img class="footer-logo" src="./assets/images/IA.png" alt="Imagen Logo"/>
+      <img class="footer-logo" src="./assets/images/Profile_Photo.jpg" alt="Imagen Logo"/>
       <p class="footer-texto text-center">Aprendo y desarrollo mis habilidades todos los días. Desarrollemos un proyecto juntos.</p>
       <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
         <a href="https://twitter.com/jeancabermudez7" target="_blank" rel="noopener noreferrer">
