--- a/index.html
+++ b/index.html
@@ -65,15 +65,15 @@
             class="navbar-nav d-flex justify-content-center align-items-center"
           >
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#sobre-mi"
+              <a class="nav-link active text-white" aria-current="page" href="#sobre-mi"
                 >Sobre mí</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#proyectos">Proyectos</a>
+              <a class="nav-link text-white" href="#proyectos">Proyectos</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#contacto">Contacto</a>
+              <a class="nav-link text-white" href="#contacto">Contacto</a>
             </li>
           </ul>
         </div>
@@ -91,11 +91,12 @@
           alt="Foto de Jean Bermudez"
         />
         <div class="typewriter">
-          <h1>Hola, soy Jean Bermúdez</h1>
+          <h1>Soy Jean Bermúdez</h1>
         </div>
         <h2>Estudiante Avanzado de Ingeniería en Sistemas de Información.</h2>
         <h2>Universidad Nacional de Costa Rica</h2>
       </div>
+      <hr/>
       <div class="hero-inferior">
         <img
           class="hero-inferior-imagen img-fluid"
@@ -116,7 +117,7 @@
       </div>
     </section>
     <!-- EXPERIENCIA -->
-    <section class="experiencia seccion-clara">
+    <section class="experiencia seccion-clara ">
       <div class="container text-center">
         <div class="row">
           <!-- DESARROLLO WEB-->
@@ -190,7 +191,7 @@
 
         </div>
       </div>
-      <div class="d-flex flex-column mt-5 mb-3 border border-1 border-gray p-3 w-75 justify-content-center align-items-center ">
+      <div class="row">
          <h2 class="seccion-titulo">Experiencia</h2>
          <div class="d-flex flex-column">
             <h5>SMCLTD - Alajuela (2023) - Presente</h5>
